@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_03-dev
 
+internal $Apache::__T variable now properly set again, thanks to Stas
+Bekman for the spot
+
 fix so "top-level" Perl{Set,Pass}Env works if Perl is started early
 
 new $r->pnotes method
